@@ -26,7 +26,7 @@
 
   <properties>
     <local-egit-site>file:/${basedir}/../org.eclipse.egit-updatesite/target/site</local-egit-site>
-    <ui.test.vmargs></ui.test.vmargs>
+    <ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
   </properties>
 
   <repositories>
